oct12 before delete tabla emp 1

--- a/sapui5/webapp/i18n/i18n.properties
+++ b/sapui5/webapp/i18n/i18n.properties
@@ -17,3 +17,10 @@ filterEmployee=Filtrar
 #table request 
 requestNumber=Número
 requestName=Nombre
+
+#employee details
+employeeInformation=Información del empleado
+empName=Nombre
+empAddress=Ubicación
+empStreet=Dirección
+empCity=Ciudad
