--- a/sapui5/webapp/i18n/i18n.properties
+++ b/sapui5/webapp/i18n/i18n.properties
@@ -25,3 +25,7 @@ empAddress=Ubicación
 empStreet=Dirección
 empCity=Ciudad
 createRequest=Crear solicitud
+
+#new request
+titleNewRequestDialog=Nueva solicitud
+closeNewReqDialog=Cerrar
